--- a/views/docs.html
+++ b/views/docs.html
@@ -777,7 +777,7 @@ button1:hover {
        </div>
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw: <a href="https://github.com/bennybotwa"
+              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw: <a href="https://github.com/Hack4lLife"
                   class="btn btn-primary btn-sm" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;GitHub</a></p>
             </div>
           </div>
@@ -835,7 +835,7 @@ button1:hover {
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; 2021 - Developed By
-              <b><a href="https://www.instagram.com/memans.tay" target="_blank">Adit</a></b>
+              <b><a href="https://www.instagram.com/aditiadit747" target="_blank">Adit</a></b>
             </span>
           </div>
         </div>
